v24.01/en/_sources/configuration_modules.rst.txt
Configuration modules

The

rc_cube

 provides several configuration modules which enable the user to
configure the

rc_cube

 for specific applications.

The configuration modules are:

Hand-eye calibration (rc_hand_eye_calibration, Section
\ref{handeye_calibration:sect-handeye-calibration})  enables the user
to calibrate the camera with respect to a robot, either via the Web
GUI or the REST-API.

CollisionCheck (rc_collision_check, Section \ref{collisioncheck:sect-
collision})  provides an easy way to check if a gripper is in
collision.

Camera calibration (rc_stereocalib, Section \ref{camera_calibration
:sect-camera-calibration})  enables the user to check and perform
camera calibration via the WEB GUI\:(Section \ref{webgui:sect-web-
gui}).

IO and Projector Control (rc_iocontrol, Section \ref{iocontrol:sect-
iocontrol})  provides control over the sensor's general purpose inputs
and outputs with special modes for controlling an external random dot
projector.

These modules are pipeline specific, which means that they run inside
each camera pipeline. Changes to their settings or parameters only
affect the corresponding pipeline and have no influence on the other
camera pipelines running on the

rc_cube

.

